Task instance Java/74